# ttypo

./: .gitignore  Cargo.toml  LICENSE.md  README.md  Trunk.toml  index.html
.github/workflows/: ci.yml  pages.yml  publish-aur.yml
packaging/aur/: README.md
packaging/aur/ttypo/: PKGBUILD
packaging/aur/ttypo-bin/: PKGBUILD
resources/: keyboard.txt
src/: config.rs  content.rs  key.rs  keyboard.rs  lib.rs  main.rs  progress.rs  resources.rs  resume_prompt.rs  time.rs  title.rs  ui.rs  web.rs
src/test/: mod.rs  results.rs
