[package]
name = "ttypo"
description = "Terminal-based typing test."
version = "0.1.5"
readme = "README.md"
repository = "https://github.com/drewja/ttypo"
homepage = "https://github.com/drewja/ttypo"
license = "MIT"
authors = ["Andrew Arendt"]
keywords = ["typing", "terminal", "tui", "practice"]
categories = ["command-line-utilities"]
edition = "2024"

[dependencies]
clap = { version = "^4.5", features = ["derive"] }
clap_complete = "^4.5"
dirs = "^6.0"
crossterm = "^0.29"
memmap2 = "^0.9"
rust-embed = "^8.2"
sha2 = "^0.10"
toml = "^1.0"

[dependencies.ratatui]
version = "^0.30"
features = ["crossterm"]

[dependencies.rand]
version = "^0.10"

[dependencies.serde]
version = "^1.0"
features = ["derive"]

[dev-dependencies]
tempfile = "3.27.0"

